--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 	<script src="vendor/ui-bootstrap-tpls.js"></script>
 	<script src="vendor/rzslider.js"></script>
 	<link rel="stylesheet" href="map.css" rel="stylesheet">
-	<script type="text/javascript" src="http://192.168.10.135/geowinmap/api/v12/core-gl-dev.js"></script>
-	<script type="text/javascript" src="http://192.168.10.135/geowinmap/static/v12/mapext.js"></script>
-	<!-- <script type="text/javascript" src="/geowinmap/static/v12/ext/mapcase.js"></script> -->
-	<!-- <script type="text/javascript" src="/geowinmap/static/v12/ext/draw.js"></script> -->
-	<!-- script type="text/javascript" src="/geowinmap/api?version=gapi&utils=mapcase,draw&res=styles/streets.json"></script-->
+	<script type="text/javascript" src="/geowinmap/api/v12/core-gl-dev.js"></script>
+	<script type="text/javascript" src="/geowinmap/static/v12/mapext.js"></script>
+	<!--script type="text/javascript" src="/geowinmap/static/v12/ext/mapcase.js"></script>
+	<script type="text/javascript" src="/geowinmap/static/v12/ext/draw.js"></script-->
 
 	<script src="js/map.js"></script>
 </head>
