--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 					<li class="t_li t_city">
 						<div class="t_li_link clearfix">
 							<span class="v_icon icon_city"></span>
-							<span class="fl">中国</span>
+							<span class="fl curr-city__text">中国</span>
 						</div>
 					</li>
 					<li class="t_li t_gj">
